# security

./: .gitignore  ANDROID_BUILD.md  ANDROID_INSTALL.md  CONTENT_FROM_BOLH.md  Cargo.toml  PEREZAPUSTIT.bat  README.md  TERMUX.md  UPDATES.md  capacitor.config.ts  package.json  perezapustit.ps1  pnpm-lock.yaml  pnpm-workspace.yaml
android/app/: build.gradle
android/app/src/main/java/com/security/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Layout.tsx  Onboarding.tsx
apps/web/src/domains/: account.ts  guards.ts  index.ts  verification.ts
apps/web/src/pages/: AcademyPage.tsx  FavoritesPage.tsx  GuardDetailPage.tsx  GuardsPage.tsx  HelpPage.tsx  LanguagesPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  PasswordPage.tsx  PremiumPage.tsx  ProfilePage.tsx  SecurityPage.tsx  SessionsPage.tsx  SettingsPage.tsx  TwoFAPage.tsx
apps/web/src/shared/: api.ts  constants.ts  languages.ts  normalizers.ts  ordersData.ts  theme.ts  user.ts
backend/: Cargo.toml
backend/src/: config.rs  handlers.rs  main.rs
builds/: security-proverka-debug.apk
docs/: ACCOUNT_SECURITY.md  API_CONTRACT.md  ARCHITECTURE.md  LANGUAGES_MAP.md  MODEL.md  STACK.md  STUBS.md  VERIFICATION.md
