[workspace]
resolver = "2"
members = ["packages/core", "backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["bertogassin"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
