[package]
name = "security-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "security-server"
path = "src/main.rs"

[dependencies]
security-core = { path = "../packages/core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
